# Quantum-Orbital-Model

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
assets/data/: elements.json  orbital_descriptions.json
assets/shaders/: axis.frag  axis.vert  orbit.frag  orbit.vert  particle.frag  particle.vert  particle3d.frag  particle3d.vert  sphere.frag  sphere.vert
docs/: architecture.md  physics_notes.md
scripts/: schrodinger_2d_validator.py
src/: main.cpp
src/app/: Application.cpp  Application.hpp  Config.hpp  ViewMode.hpp
src/physics/: BohrModel.cpp  BohrModel.hpp  Element.cpp  Element.hpp  ElementDatabase.cpp  ElementDatabase.hpp  Orbital.cpp  Orbital.hpp  OrbitalSampler.cpp  OrbitalSampler.hpp  QuantumNumbers.hpp  RadialFunction.cpp  RadialFunction.hpp  SphericalHarmonics.cpp  SphericalHarmonics.hpp  Wavefunction.cpp  Wavefunction.hpp
src/platform/: Input.cpp  Input.hpp  Window.cpp  Window.hpp
src/rendering/: AxisGizmo.cpp  AxisGizmo.hpp  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  OrbitRenderer.cpp  OrbitRenderer.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  ParticleRenderer3D.cpp  ParticleRenderer3D.hpp  Shader.cpp  Shader.hpp  SphereWireframe.cpp  SphereWireframe.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/ui/: ControlPanel.cpp  ControlPanel.hpp  InfoPanel.cpp  InfoPanel.hpp  UIManager.cpp  UIManager.hpp
src/utils/: FileIO.cpp  FileIO.hpp
